# fafd

./: .gitignore  LICENSE.md  README.md  default.nix  flake.nix  pyproject.toml  shell.nix
src/fafd/: __main__.py  activate.php
